node bootstrap api (#451)
This PR adds the /api/v1/cluster/:name/bootstrap endpoint to get configuration to manually onboard a node (Kubelet).
In the process this PR also introduces a kluster informer to that apiserver and all GET api calls are fulfilled from the local cache instead of forwarding the request to the control plane api.
