# pkg/api/models/bootstrap_config.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// BootstrapConfig bootstrap config
+// swagger:model BootstrapConfig
+type BootstrapConfig struct {
+
+	// config
+	Config string `json:"config,omitempty"`
+
+	// kubeconfig
+	Kubeconfig string `json:"kubeconfig,omitempty"`
+
+	// kubelet clients c a
+	KubeletClientsCA string `json:"kubeletClientsCA,omitempty"`
+
+	// kubelet clients c a file
+	KubeletClientsCAFile string `json:"kubeletClientsCAFile,omitempty"`
+}
+
+// Validate validates this bootstrap config
+func (m *BootstrapConfig) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BootstrapConfig) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BootstrapConfig) UnmarshalBinary(b []byte) error {
+	var res BootstrapConfig
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
