# pkg/api/rest/operations/get_bootstrap_config_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/sapcc/kubernikus/pkg/api/models"
+)
+
+// GetBootstrapConfigOKCode is the HTTP code returned for type GetBootstrapConfigOK
+const GetBootstrapConfigOKCode int = 200
+
+/*GetBootstrapConfigOK OK
+
+swagger:response getBootstrapConfigOK
+*/
+type GetBootstrapConfigOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.BootstrapConfig `json:"body,omitempty"`
+}
+
+// NewGetBootstrapConfigOK creates GetBootstrapConfigOK with default headers values
+func NewGetBootstrapConfigOK() *GetBootstrapConfigOK {
+
+	return &GetBootstrapConfigOK{}
+}
+
+// WithPayload adds the payload to the get bootstrap config o k response
+func (o *GetBootstrapConfigOK) WithPayload(payload *models.BootstrapConfig) *GetBootstrapConfigOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get bootstrap config o k response
+func (o *GetBootstrapConfigOK) SetPayload(payload *models.BootstrapConfig) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBootstrapConfigOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetBootstrapConfigDefault Error
+
+swagger:response getBootstrapConfigDefault
+*/
+type GetBootstrapConfigDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetBootstrapConfigDefault creates GetBootstrapConfigDefault with default headers values
+func NewGetBootstrapConfigDefault(code int) *GetBootstrapConfigDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetBootstrapConfigDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get bootstrap config default response
+func (o *GetBootstrapConfigDefault) WithStatusCode(code int) *GetBootstrapConfigDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get bootstrap config default response
+func (o *GetBootstrapConfigDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get bootstrap config default response
+func (o *GetBootstrapConfigDefault) WithPayload(payload *models.Error) *GetBootstrapConfigDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get bootstrap config default response
+func (o *GetBootstrapConfigDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetBootstrapConfigDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
